// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`stats get get by globalView should filter domains to a single org if specified 1`] = `
Object {
  "domains": Object {
    "numVulnerabilities": Array [
      Object {
        "id": Any<String>,
        "label": Any<String>,
        "value": 1,
      },
    ],
    "ports": Array [
      Object {
        "id": "80",
        "label": "80",
        "value": 1,
      },
    ],
    "services": Array [
      Object {
        "id": "http",
        "label": "http",
        "value": 1,
      },
    ],
    "total": 1,
  },
  "vulnerabilities": Object {
    "byOrg": Array [
      Object {
        "id": "test-0.43832164298090404",
        "label": "test-0.43832164298090404",
        "value": 1,
      },
    ],
    "latestVulnerabilities": Array [
      Object {
        "actions": Array [],
        "cpe": null,
        "createdAt": "2020-10-29T13:33:45.382Z",
        "cve": null,
        "cvss": "9",
        "cwe": null,
        "description": "",
        "domain": Object {
          "asn": null,
          "cloudHosted": false,
          "country": null,
          "createdAt": "2020-10-29T13:33:45.332Z",
          "fromRootDomain": null,
          "id": "38f8f625-9ea9-451e-ae9b-0f307cf9c383",
          "ip": null,
          "name": "test-0.24238222377267005",
          "reverseName": "24238222377267005.test-0",
          "screenshot": null,
          "ssl": null,
          "syncedAt": null,
          "updatedAt": "2020-10-29T13:33:45.332Z",
        },
        "id": "a6df07ee-c290-4ce2-8235-594e6ef620dd",
        "lastSeen": null,
        "needsPopulation": false,
        "notes": "",
        "references": Array [],
        "severity": "High",
        "source": "cpe2cve",
        "state": "open",
        "substate": "unconfirmed",
        "title": "vuln title",
        "updatedAt": "2020-10-29T13:33:45.382Z",
      },
    ],
    "severity": Array [
      Object {
        "id": "High",
        "label": "High",
        "value": 1,
      },
    ],
  },
}
`;

exports[`stats get get by org user should return only domains from that org 1`] = `
Object {
  "domains": Object {
    "numVulnerabilities": Array [
      Object {
        "id": Any<String>,
        "label": Any<String>,
        "value": 1,
      },
    ],
    "ports": Array [
      Object {
        "id": "80",
        "label": "80",
        "value": 1,
      },
    ],
    "services": Array [
      Object {
        "id": "http",
        "label": "http",
        "value": 1,
      },
    ],
    "total": 1,
  },
  "vulnerabilities": Object {
    "byOrg": Array [
      Object {
        "id": "test-0.9659010251047202",
        "label": "test-0.9659010251047202",
        "value": 1,
      },
    ],
    "latestVulnerabilities": Array [
      Object {
        "actions": Array [],
        "cpe": null,
        "createdAt": "2020-10-29T13:33:44.217Z",
        "cve": null,
        "cvss": "9",
        "cwe": null,
        "description": "",
        "domain": Object {
          "asn": null,
          "cloudHosted": false,
          "country": null,
          "createdAt": "2020-10-29T13:33:44.102Z",
          "fromRootDomain": null,
          "id": "db77f0cb-20a6-4453-b0c1-f1888275f4c0",
          "ip": null,
          "name": "test-0.2594339210653289",
          "reverseName": "2594339210653289.test-0",
          "screenshot": null,
          "ssl": null,
          "syncedAt": null,
          "updatedAt": "2020-10-29T13:33:44.102Z",
        },
        "id": "4bc61a41-fe85-4b34-b389-3ba9cca041ce",
        "lastSeen": null,
        "needsPopulation": false,
        "notes": "",
        "references": Array [],
        "severity": "High",
        "source": "cpe2cve",
        "state": "open",
        "substate": "unconfirmed",
        "title": "vuln title",
        "updatedAt": "2020-10-29T13:33:44.217Z",
      },
    ],
    "severity": Array [
      Object {
        "id": "High",
        "label": "High",
        "value": 1,
      },
    ],
  },
}
`;
